<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    tools:context=".LocalSeleccionadoFragment">

    <Button
        android:id="@+id/chatear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/chatear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/f_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/facebook_logo"
        android:src="@drawable/f_logo"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label3" />

    <ImageView
        android:id="@+id/ig_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/insta_logo"
        android:src="@drawable/insta_logo"
        app:layout_constraintStart_toEndOf="@+id/f_logo"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="238dp"
        android:background="@color/white"
        android:contentDescription="@string/imagen_del_ingeniero"
        android:src="@drawable/gattito_llorando"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:shadowColor="#03A9F4"
        android:text="@string/nombre"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/profesion_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#03A9F4"
        android:text="@string/profesion"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_bold" />

    <TextView
        android:id="@+id/ubicacion_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#03A9F4"
        android:text="@string/direcci_n"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profesion_bold" />

    <TextView
        android:id="@+id/ubicacion_bold2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#03A9F4"
        android:text="@string/sitio_web"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubicacion_bold" />

    <TextView
        android:id="@+id/ubicacion_bold3"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#03A9F4"
        android:text="@string/rating"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubicacion_bold2" />

    <TextView
        android:id="@+id/nombre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/ing_gato_lloron"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/nombre_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/inge_en_sistemas_de_informaci_n"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label" />

    <TextView
        android:id="@+id/nombre_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/la_casa_del_lado_45"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label2" />

    <TextView
        android:id="@+id/nombre_label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/n_a"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label3" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:contentDescription="@string/rating"
        android:rating="1.5"
        android:isIndicator="true"
        app:layout_constraintStart_toEndOf="@+id/profesion_bold"
        app:layout_constraintTop_toBottomOf="@+id/nombre_label4" />

</androidx.constraintlayout.widget.ConstraintLayout>