<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatFragment">

    <RadioGroup
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="420dp"
        android:baselineAligned="false"
        android:textAlignment="viewEnd"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="baseline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/paypal_logo"
            android:baselineAligned="false"
            android:textAlignment="textEnd" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/cash" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/visams" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="380dp"
        android:text="@string/selecciona_un_m_todo_de_pago"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/pagar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/_123"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="77dp"
        android:text="@string/monto_a_pagar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>